# cmfrec

./: .Rbuildignore  .gitattributes  .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  README.md  cmfrec.pc.in  pyproject.toml  requirements.txt  setup.py
R/: cmfrec.R  factors.R  factors_single.R  fit.R  helpers.R  impute.R  items.R  methods.R  other.R  predict.R  predict_new.R  topN.R
benchmark/: README.md  benchmark_explicit_cmfrec.ipynb  benchmark_explicit_cornac.ipynb  benchmark_explicit_lenskit.ipynb  benchmark_explicit_pyspark.ipynb  benchmark_explicit_r.Rmd  benchmark_explicit_r.html  benchmark_explicit_spotlight.ipynb  benchmark_explicit_surprise.ipynb  benchmark_implicit_cmfrec.ipynb  benchmark_implicit_cornac.ipynb  benchmark_implicit_implicit.ipynb  benchmark_implicit_lenskit.ipynb  benchmark_implicit_qmf.ipynb  benchmark_implicit_r.Rmd  benchmark_implicit_r.html  benchmark_pyreclab_explicit.ipynb  benchmark_vw_cli.ipynb  explicit_feedback_py.ipynb  split_lastfm_data.ipynb  split_ml10m_data.ipynb
cmfrec/: __init__.py  cfuns_double.pyx  cfuns_double_plusblas.pyx  cfuns_float.pyx  cfuns_float_plusblas.pyx  cython_cblas.pxi  wrapper_untyped.pxi
docs/: .directory  Makefile  cmfrec.rst  conf.py  index.rst  make.bat  requirements.txt
docs/source/: modules.rst
example/: c_example.c  cmfrec_imputer.ipynb  cmfrec_movielens_sideinfo.ipynb  load_data.ipynb
include/: cmfrec.h.in
inst/: COPYRIGHTS
inst/doc/: cmfrec_vignette.html
man/: CMF.from.model.matrices.Rd  cmfrec.Rd  drop.nonessential.matrices.Rd  factors.Rd  factors_single.Rd  fit.Rd  imputeX.Rd  item_factors.Rd  precompute.for.predictions.Rd  predict.cmfrec.Rd  predict_new.Rd  predict_new_items.Rd  print.cmfrec.Rd  summary.cmfrec.Rd  swap.users.and.items.Rd  topN.Rd
src/: Makevars  Rwrapper.c  arithmetic_ansi.h  cblas_wrappers.c  cmfrec-win.def  cmfrec.h  collective.c  common.c  helpers.c  lbfgs.c  lbfgs.h  offsets.c  ziggurat.h
test_math/: README.md  c_math_funs.pyx  setup.py  test_center_cols.py  test_classic_fun_grad.py  test_closed_form.py  test_collective_cold_start.py  test_collective_single_fun_grad.py  test_collective_warm_start.py  test_grad_collective.py  test_grad_offsets.py  test_implicit.py  test_init_biases.py  test_optimizeA.py  test_optimizeA_collective.py  test_optimizeA_collective_implicit.py  test_topN.py
vignettes/: cmfrec_vignette.Rmd
